<resources>

    <string name="app_name" translatable="false">Vegginner</string>

    <!-- main activity -->
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Do you want to close the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- menu items -->
    <string name="beginning">Beginning</string>
    <string name="advices">Advices</string>
    <string name="equivalencies">Equivalencies</string>
    <string name="recipes">Recipes</string>
    <string name="places">Places</string>
    <string name="events">Events</string>

    <!-- beginning -->
    <string name="welcome">Welcome to Vegginner! This prototype has:\n\n* Recipes where you could list them as favorites. Furthermore, you could save its ingredients for the shopping list widget.\n\n* Places where you could find out what kind of veg-friendly places are around you.

</string>

    <!-- recipes -->
    <string name="servings">Servings:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="list">List</string>
    <string name="steps">Steps</string>
    <string name="details">Details</string>
    <string name="steps_provided">Steps author:</string>
    <string name="no_recipes">Sorry! There are no recipes to show</string>
    <string name="no_steps">Sorry! The author removed this recipe</string>
    <string name="come_back_recipes">Come back to the main list</string>

    <!-- recipes menu -->
    <string name="all_recipes">All recipes</string>
    <string name="fav_recipes">Favorite recipes</string>

    <!-- events -->
    <string name="events_description">Find veg-friendly events near you!</string>
    <string name="events_date_label">Date:</string>
    <string name="events_place_label">Where:</string>
    <string name="events_group_label">Who:</string>
    <string name="events_attendee_label">Attendee:</string>
    <string name="events_description_label">Description:</string>
    <string name="no_events">Sorry! There are no events near you</string>

    <!-- no internet -->
    <string name="no_internet_title">There is no internet connection</string>
    <string name="no_internet_message">Enable the internet connection. Do you want to load the list again?</string>
    <string name="retry">Retry</string>

    <!-- no more results -->
    <string name="no_results">There are no more results</string>

    <!-- error -->
    <string name="something_wrong_title">Something went wrong</string>
    <string name="something_wrong_message">Please, if the problem persists, contact with the author. Do you want to load the list again?</string>

    <!-- content description texts -->
    <string name="image_to_decorate">Just an image to decorate or points something</string>
    <string name="app_logo">App logo</string>
    <string name="recipe_image">Recipe image</string>
    <string name="edamam_logo">Powered by Edamam</string>
    <string name="black_background">Black background to read recipe titles better</string>
    <string name="like_button">Button to save or delete recipes</string>
    <string name="event_image">Event image</string>
    <string name="shopping_list_description">Shopping list</string>
    <string name="element_bought">Check icon to show the ingredient is bought</string>
    <string name="powered_google">Powered by Google</string>
    <string name="place_type_image">Image which represents a place type</string>

    <!-- dummy texts -->
    <string name="mock_description" translatable="false">Lorem ipsum dolor sit amet, nunc dui amet vestibulum mauris. Fringilla blandit ac quisque ligula ante nascetur, cursus morbi cras. Phasellus malesuada arcu nam felis, tellus in tincidunt imperdiet gravida, accumsan elit pede magna penatibus, dictumst urna montes at tempor. Dolor est lorem, asperiores est duis sit suscipit ut, sit lorem in. Quam urna dui hac et sodales, ac proin donec suspendisse aliquam, viverra quisque tellus, vel fermentum vestibulum mollis penatibus, quam aut nisl justo ut interdum in. Ut convallis condimentum, curabitur at viverra nec at, mauris vestibulum velit et commodo. Amet porta sociis. Est blandit faucibus cras in. Diam praesentium, tortor a at nulla sed, odio tempor in eget nonummy felis, phasellus fringilla sed metus consectetuer in mollis. Natoque sed sed odio eu mattis, sed varius occaecat, id nullam eros, wisi at laoreet vestibulum. Ut ullamcorper metus ipsum dui.</string>
    <string name="mock_small_description" translatable="false">Lorem ipsum dolor sit amet, nunc dui amet vestibulum mauris. Fringilla blandit ac quisque ligula ante nascetur, cursus morbi cras.</string>
    <string name="mock_sentence" translatable="false">Hi, this is a mock sentence</string>
    <string name="mock_word" translatable="false">mock word</string>
    <string name="mock_event_date" translatable="false">12\n January\n 2018</string>
    <string name="mock_rating" translatable="false">4.5</string>

    <!-- widget -->
    <string name="shopping_list_empty">Shopping list empty!</string>
    <string name="shopping_list">Shopping list</string>
    <string name="delete_bought_elements">Clear\n purchased</string>

    <!-- Places -->
    <string name="map_spinner_label">Veg-friendly type:</string>
    <string name="no_places">Sorry! There are no places near you</string>
    <string name="here">You are here</string>
    <string name="allow_location">Allow location</string>
    <string name="location_dialog_title">Request location</string>
    <string name="location_dialog_message">Please, let vegginner locate your device to show veg-friendly places near you.</string>
    <string name="ok">OK</string>
    <string name="location_format">%1$s,%2$s</string>
    <string name="enable_gps">To continue, please turn on GPS</string>
    <string name="veg_friendly_prompt">Choose one…</string>
    <string-array name="veg_friendly_array">
        <item>bakery</item>
        <item>bar</item>
        <item>cafe</item>
        <item>meal delivery</item>
        <item>meal takeaway</item>
        <item>restaurant</item>
        <item>store</item>
        <item>supermarket</item>
    </string-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_GOOGLE_MAP_KEY</string>

    <!-- coming soon -->
    <string name="coming_soon">Coming soon! Visit my repository <a href="https://github.com/juancoob/Vegginner">https://github.com/juancoob/Vegginner</a></string>

</resources>
