<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_background_color"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/shopping_list"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/importantText"
            android:drawableLeft="@mipmap/ic_launcher"
            android:drawableStart="@mipmap/ic_launcher"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_clear_purchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:text="@string/delete_bought_elements" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lv_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/min_margin"
            android:contentDescription="@string/shopping_list_description"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            tools:text="@string/shopping_list_empty" />
    </RelativeLayout>
</LinearLayout>