<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <TextView
        android:id="@+id/tv_main_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/mock_small_description" />

    <android.support.constraint.Guideline
        android:id="@+id/g_selection_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <Spinner
        android:id="@+id/s_replazable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g_selection_guideline"
        tools:text="@string/mock_word" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/image_to_decorate"
        android:src="@drawable/ic_chevron_right_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_result"
        app:layout_constraintLeft_toRightOf="@+id/s_replazable"
        app:layout_constraintRight_toLeftOf="@+id/tv_result"
        app:layout_constraintStart_toEndOf="@+id/s_replazable"
        app:layout_constraintTop_toBottomOf="@+id/g_selection_guideline" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_description"
        app:layout_constraintRight_toRightOf="@+id/tv_main_description"
        app:layout_constraintTop_toBottomOf="@+id/g_selection_guideline"
        tools:text="@string/mock_word" />

    <android.support.constraint.Guideline
        android:id="@+id/g_result_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/tv_result_title"
        style="@style/titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/min_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g_result_guideline"
        tools:text="@string/mock_sentence" />

    <TextView
        android:id="@+id/tv_result_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_title"
        tools:text="@string/mock_description" />

</android.support.constraint.ConstraintLayout>