<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <TextView
        android:id="@+id/tv_servings_label"
        style="@style/titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/min_margin"
        android:layout_marginStart="@dimen/min_margin"
        android:textColor="@color/colorSecondaryText"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toRightOf="@+id/tv_servings_label"
        app:layout_constraintStart_toEndOf="@+id/tv_servings_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/mock_word" />

    <TextView
        android:id="@+id/tv_ingredients_label"
        style="@style/titleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/ingredients"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_servings_label" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_label" />


</android.support.constraint.ConstraintLayout>